2003-08-11  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.c (e_cal_view_destroy): disconnect from signals
	on the model.
	(e_cal_view_set_model): disconnect from signals on the old model
	and connect on the new one.
	(model_changed_cb): tell the views to redraw when the model changes.

	* gui/gnome-cal.c (dn_query_obj_updated_cb, gnome_calendar_destroy,
	client_categories_changed_cb): removed the 'client' field from the
	private structure, so don't use it anymore
	(client_cal_opened_cb): if successful, add the CalClient to the
	views' model.
	(gnome_calendar_construct): don't add the client to the task model,
	add it in client_cal_opened_cb().
	(gnome_calendar_get_cal_client): removed.
	(gnome_calendar_get_calendar_model): new function.
	(gnome_calendar_open): create the CalClient here, to be added to the
	views' model in client_cal_opened_cb().

2003-08-09  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.[ch] (e_cal_view_get_cal_client,
	e_cal_view_set_cal_client, e_cal_view_get_query,
	e_cal_view_set_query): removed unneeded functions.
	(e_cal_view_get_model, e_cal_view_set_model): new functions.
	(e_cal_view_destroy): free the model.
	(e_cal_view_init): removed sexp initialization.

	* gui/gnome-cal.c (gnome_calendar_set_query): set the
	query on the view's model, not on the view.
	(gnome_calendar_construct): create the calendar model and associate
	it to all the views.

2003-08-08  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model-calendar.c (ecmc_fill_component_from_model):
	implemented new virtual method.
	(ecmc_class_init): initialize new virtual method.

2003-08-08  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c (cal_client_update_object_with_mod):
	cal_client_get_component_as_string_internal expects now a
	icalcomponent, not a CalComponent.

	* gui/e-cal-model.h: added fill_component_from_model virtual method.

	* gui/e-cal-model.c (e_cal_model_get_default_client): return